--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   equatable: any
   flutter_bloc: any
   http: any
+  shared_preferences: any
+
 
 dev_dependencies:
   flutter_test:
